<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_map_view">
    <fragment
        android:id="@+id/navigation_map_view"
        android:name="com.waminiyi.go4lunch.ui.MapViewFragment"
        android:label="@string/map_view_text"
        tools:layout="@layout/fragment_map_view">
        <action
            android:id="@+id/map_to_lunch_action"
            app:destination="@id/navigation_your_lunch"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="restaurant"
                app:argType="com.waminiyi.go4lunch.model.Restaurant" />
        </action>
        <action
            android:id="@+id/action_navigation_map_view_to_navigation_list_view3"
            app:destination="@id/navigation_list_view"
            app:popUpTo="@id/navigation_map_view"
            app:popUpToSaveState="true"
            app:restoreState="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_list_view"
        android:name="com.waminiyi.go4lunch.ui.ListViewFragment"
        android:label="@string/list_view_text"
        tools:layout="@layout/fragment_list_view">
        <action
            android:id="@+id/list_to_lunch_action"
            app:destination="@id/navigation_your_lunch"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim">
            <argument
                android:name="restaurant"
                app:argType="com.waminiyi.go4lunch.model.Restaurant" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.waminiyi.go4lunch.ui.WorkmatesFragment"
        android:label="@string/workmates_text"
        tools:layout="@layout/fragment_workmates">
        <action
            android:id="@+id/action_navigation_workmates_to_navigation_your_lunch"
            app:destination="@id/navigation_your_lunch">
            <argument
                android:name="restaurant"
                app:argType="com.waminiyi.go4lunch.model.Restaurant" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_your_lunch"
        android:name="com.waminiyi.go4lunch.ui.RestaurantDetailsFragment"
        android:label="@string/your_lunch"
        tools:layout="@layout/fragment_restaurant_details">
        <argument
            android:name="restaurant"
            app:argType="com.waminiyi.go4lunch.model.Restaurant" />
    </fragment>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.waminiyi.go4lunch.ui.SettingsFragment"
        android:label="@string/settings" />
    <action
        android:id="@+id/action_global_settings_fragment"
        app:destination="@id/settings_fragment" />


</navigation>