<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height"
    android:background="@drawable/background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackTransparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_app_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/drawer_logo_text_margin_top"
            android:layout_marginBottom="@dimen/drawer_logo_text_margin_bottom"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/drawer_logo_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/drawer_profile_image"
                android:layout_width="@dimen/drawer_profile_image_size"
                android:layout_height="@dimen/drawer_profile_image_size"
                android:layout_margin="@dimen/drawer_logo_text_margin_top"
                android:src="@drawable/ic_person" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/drawer_username_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/drawer_user_info_margin"
                    android:text="@string/username_placeholder"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/drawer_user_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/drawer_user_info_margin"
                    android:text="@string/user_mail_placeholder"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>