<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/restaurant_card_view_height"
    android:layout_margin="@dimen/restaurant_card_view_margin"
    app:cardCornerRadius="@dimen/restaurant_card_view_corner_radius"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/restaurant_card_view_text_height"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/restaurant_name_placeholder"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurant_address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/restaurant_card_view_text_height"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/address_place_holder"
                android:textColor="#505050"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/open_now"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/restaurant_card_view_text_height"
                android:layout_marginTop="8dp"
                android:text="@string/open_now"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/restaurant_custom_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="2"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/restaurant_card_view_text_height"
                android:text="@string/distance_place_holder"
                android:textColor="#505050"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lunch_count"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/restaurant_card_view_text_height"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:text="@string/lunch_place_holder"
                android:textColor="#505050"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_person" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/restaurant_item_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:isIndicator="true"
                android:numStars="3"
                android:stepSize="0.1"
                android:theme="@style/RatingBar" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <RelativeLayout
            android:id="@+id/restaurant_image_layout"
            android:layout_width="0dp"
            android:layout_height="@dimen/restaurant_card_view_image_height"
            android:layout_weight="3">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/restaurant_card_view_height"
                android:scaleType="fitXY"
                android:src="@drawable/restaurant_image_placeholder" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/favorite_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/favorite_button_background"
                android:padding="@dimen/restaurant_card_view_favorite_btn_padding"
                android:src="@drawable/favorite" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>