<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/authentication_layout"
    tools:context=".ui.LoginActivity"
    android:background="@drawable/img_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackTransparent" />

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_logo_margin_top"
        android:layout_marginBottom="@dimen/app_logo_margin_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        app:tint="@color/white"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/logo_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/app_logo_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageview" />

    <TextView
        android:id="@+id/slogan_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="@dimen/slogan_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_textview" />

    <androidx.cardview.widget.CardView
        android:id="@+id/facebook_sign_in_card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fb_sign_in_button_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/sign_in_buttons_margin_start"
        android:layout_marginTop="@dimen/sign_in_buttons_margin_top"
        android:layout_marginEnd="@dimen/sign_in_buttons_margin_end"
        app:cardCornerRadius="@dimen/fb_card_view_cornerRadius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_textview">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:bufferType="editable"
            android:paddingLeft="@dimen/fb_button_padding_left"
            android:paddingTop="@dimen/fb_button_padding_top"
            android:paddingBottom="@dimen/fb_button_padding_bottom" />

    </androidx.cardview.widget.CardView>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/google_sign_in_button_height"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/google_button_margin_start"
        android:layout_marginTop="@dimen/google_button_margin_top"
        android:layout_marginEnd="@dimen/google_button_margin_end"
        app:buttonSize="wide"
        app:colorScheme="dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_sign_in_card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>